Fixed text wrapping for smaller screensizes.

--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -22,6 +22,9 @@ File: Core
 /* =============
    Common
 ============= */
+
+.nowrap{white-space: normal;}
+
 body {
   background: #ebeff2;
   font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
